--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "bootstrap-select": "^1.13.18",
     "firebase": "^7.23.0",
-    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
+    "react-select-plus": "^1.0.0-rc.3.patch12"
   },
   "scripts": {
     "start": "react-scripts start",
